--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>Kevin Whitmire | Web Developer &amp; UX Enthusiast</title>
+    <title>Harrisburg City | The historical City</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Kevin Whitmire, Kevin, Whitmire, Kwhitmire21, Harrisburg university, Harrisburg, university, student, front-end, web, website, computer, developer, designer, co-op" />
