Update arrow12 png

--- a/secondpage.html
+++ b/secondpage.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="navbar-header page-scroll">
                     <a href="index.html" target="_blank">
-                                    <img id="arrow12" src="img/arrow12.png" alt="arrow"/>
+                   <img src="img/arrow12.png">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
