--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header page-scroll">
-                    <a href="secondpage.html" target="_blank">
-                    <img src="img/arrow12.png">
+                    <div class="button">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
+                    </div>
                     <a class="navbar-brand page-scroll"></a>
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         
+                         <li class="hidden">
+                            <a class="page-scroll" href="#page-top"></a>
                         <li><a class="page-scroll" href="#about">Founding</a></li>
                         <li><a class="page-scroll" href="#experience">Geography</a></li>
                         <li><a class="page-scroll" href="#portfolio">Cityscape</a></li>
