--- a/secondpage.html
+++ b/secondpage.html
@@ -36,8 +36,6 @@
         <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header page-scroll">
-                    <a href="index.html" target="_blank">
-                   <img src="img/arrow12.png">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
@@ -45,7 +43,7 @@
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right"> 
-
+                         <li class="hidden">
                         <li><a class="page-scroll" href="#about">Economy</a></li>
                         <li><a class="page-scroll" href="#experience">Culture</a></li>
                         <li><a class="page-scroll" href="#portfolio">Government</a></li>
