--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Architecture</h2>
+                        <h2>Cityscape</h2>
                         <div class="spacer-10"></div>
                         <div class="col-md-4 wp2 delay-025s">
                             <div class="icon"><i class="fa fa-laptop"></i></div>
