--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                             <h3>Geography:</h3>
                             <!-- <h4>Geography:</h4> -->
                             <div class="tldr-proc">
-                                <div class="tldr-icon" id="tldr-keyboard"><i class="fa fa-keyboard-o"></i></div>
-                                <h5>Topography</h5>
+                                <div class="tldr-icon"><i class="fa fa-briefcase"></i></div>
+                                <h5>Business</h5>
                             </div>
                             <div class="tldr-proc">
-                                <div class="tldr-icon"><i class="fa fa-pencil"></i></div>
-                                <h5>Adjacent municipalities</h5>
+                                <div class="tldr-icon"><i class="fa fa-home"></i></div>
+                                <h5>City life</h5>
                             </div>
                             <div class="tldr-proc">
                                 <div class="tldr-icon"><i class="fa fa-cloud"></i></div>
@@ -116,8 +116,7 @@
                             <div class="icon"><i class="fa fa-laptop"></i></div>
                             <h3>Structure integrity</h3>
                             
-                            <p>Harrisburg is home to the Pennsylvania State Capitol. Completed in 1906, the central dome rises to a height of 272 feet (83 m) and was modeled on that of St. Peter's Basilica in Vatican City, Rome. The building was designed by Joseph Miller Huston and is adorned with sculpture, most notably the two groups, Love and Labor, the Unbroken Law and The Burden of Life, the Broken Law by sculptor George Grey Barnard; murals by Violet Oakley and Edwin Austin Abbey; tile floor by Henry Mercer, which tells the story of the Commonwealth of Pennsylvania. The state capitol is only the third-tallest building of Harrisburg. The five tallest buildings are 333 Market Street with a height of 341 feet (104 m), Pennsylvania Place with a height of 291 feet (89 m), the Pennsylvania State Capitol with a height of 272 feet (83 m), Presbyterian Apartments with a height of 259 feet (79 m) and the Fulton Bank Building with a height of 255 feet (78 m).
-                            </p>
+                            <p>Harrisburg is home to the Pennsylvania State Capitol. Completed in 1906, the central dome rises to a height of 272 feet (83 m) and was modeled on that of St. Peter's Basilica in Vatican City, Rome. The building was designed by Joseph Miller Huston and is adorned with sculpture, most notably the two groups, Love and Labor, the Unbroken Law and The Burden of Life, the Broken Law by sculptor George Grey Barnard; murals by Violet Oakley and Edwin Austin Abbey; tile floor by Henry Mercer, which tells the story of the Commonwealth of Pennsylvania.</p>
                         </div>
                         <div class="col-md-4 wp2 delay-025s">
                             <div class="icon"><i class="fa fa-home"></i></div>
@@ -127,7 +126,7 @@
                         <div class="col-md-4 wp2 delay-025s">
                             <div class="icon"><i class="fa fa-book"></i></div>
                             <h3>Education</h3>
-                            <p>The City of Harrisburg is served by the Harrisburg School District. The school district provides education for the city's youth beginning with all-day kindergarten through twelfth grade. A multi-year restructuring plan is aimed at making the district a model for urban public schools. The district has been troubled for decades with management fiascos and low test scores. In the summer of 2007, more than 2,000 city students were enrolled in educational programs offered by the Harrisburg School District as remediation.[95] The District has been among the lowest ranking districts for academics in the Commonwealth, ranking 492nd out of 496 district ranked by the Pittsburgh Business Times, in 2014.[96] Additionally, several of the Harrisburg School District's school have been listed on the lowest 15% achievement list each year since 2011. This designation means the students qualify for the State's Opportunity Scholarship program. Scholarships, funded by businesses, are available to attend another public school district or a private school.[97][98] One school in the Harrisburg School District has had consistently adequate academic achievement, Math Science Academy serves pupils grades 5th, 6th, 7th and 8th.[99].</p>
+                            <p>The City of Harrisburg is served by the Harrisburg School District. The school district provides education for the city's youth beginning with all-day kindergarten through twelfth grade. A multi-year restructuring plan is aimed at making the district a model for urban public schools. The district has been troubled for decades with management fiascos and low test scores. In the summer of 2007, more than 2,000 city students were enrolled in educational programs offered by the Harrisburg School District as remediation.[95] The District has been among the lowest ranking districts for academics in the Commonwealth, ranking 492nd out of 496 district ranked by the Pittsburgh Business Times, in 2014.</p>
                         </div>
                     </div>
                 </div>
